--- a/k8s-qa-harbor.yaml
+++ b/k8s-qa-harbor.yaml
@@ -13,6 +13,8 @@ spec:
       labels:
         app: jenkins-demo
     spec:
+      imagePullSecrets:
+      - name: harborsecret
       containers:
       - image: 192.168.106.181/jenkins-demo/jenkins-demo:<BUILD_TAG>
         imagePullPolicy: IfNotPresent
